<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SpiderActivity">

    <ImageView
        android:id="@+id/imageViewSpider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_spider_on_a_tree_3" />

    <TextView
        android:id="@+id/textViewSpider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:textColor="@color/text"
        android:text="@string/aranha"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSpider" />

    <TextView
        android:id="@+id/textViewSpiderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/spider_text"
        android:lineSpacingExtra="1.5dp"
        android:layout_margin="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpider" />

    <Button
        android:id="@+id/buttonNextQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximo"
        app:icon="@android:drawable/ic_menu_send"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpiderText" />
</androidx.constraintlayout.widget.ConstraintLayout>